--- a/app/design/frontend/base/default/template/email/order/items.phtml
+++ b/app/design/frontend/base/default/template/email/order/items.phtml
@@ -25,19 +25,18 @@
  */
 ?>
 <?php $_order = $this->getOrder() ?>
-<table cellspacing="0" cellpadding="0" border="0" width="650" style="border:1px solid #EAEAEA;">
+<table cellspacing="0" cellpadding="0" border="0" width="650" style="border-bottom:1px solid #431F4C;margin-top:50px">
     <thead>
         <tr>
-            <th align="left" bgcolor="#EAEAEA" style="font-size:13px; padding:3px 9px"><?php echo $this->__('Item') ?></th>
-            <th align="left" bgcolor="#EAEAEA" style="font-size:13px; padding:3px 9px"><?php echo $this->__('Sku') ?></th>
-            <th align="center" bgcolor="#EAEAEA" style="font-size:13px; padding:3px 9px"><?php echo $this->__('Qty') ?></th>
-            <th align="right" bgcolor="#EAEAEA" style="font-size:13px; padding:3px 9px"><?php echo $this->__('Subtotal') ?></th>
+            <th align="left" bgcolor="#431F4C" style="font-size:14px; padding:3px 9px;color:#fff;font-weight:bold;"><?php echo $this->__('Item') ?></th>
+            <th align="left" bgcolor="#431F4C" style="font-size:14px; padding:3px 9px;color:#fff;font-weight:bold;"><?php echo $this->__('Qty') ?></th>
+            <th align="right" bgcolor="#431F4C" style="font-size:14px; padding:3px 9px;color:#fff;font-weight:bold;"><?php echo $this->__('Subtotal') ?></th>
         </tr>
     </thead>
 
     <?php $i=0; foreach ($_order->getAllItems() as $_item): ?>
     <?php if($_item->getParentItem()) continue; else $i++; ?>
-    <tbody<?php echo $i%2 ? ' bgcolor="#F6F6F6"' : '' ?>>
+    <tbody<?php echo $i%2 ? ' bgcolor="#e2e2e2"' : '' ?>>
         <?php echo $this->getItemHtml($_item) ?>
     </tbody>
     <?php endforeach; ?>
