--- a/app/locale/en_US/template/email/sales/order_new.html
+++ b/app/locale/en_US/template/email/sales/order_new.html
@@ -40,7 +40,7 @@ body,td { color:#2f2f2f; font:11px/1.35em Arial, Helvetica, sans-serif; }
             </tr>
             <tr>
                 <td>
-                    <h2 style="font-size:14px; font-weight:normal; margin:0;">Your Order <strong>#{{var order.increment_id}}</strong> (placed on {{var order.getCreatedAtFormated('short')}})</h2>
+                    <h2 style="font-size:12px; font-weight:normal; margin:0;">Your Order <strong>#{{var order.increment_id}}</strong> (placed on {{var order.getCreatedAtFormated('short')}})</h2>
                 </td>
             </tr>
             <tr>
@@ -48,9 +48,9 @@ body,td { color:#2f2f2f; font:11px/1.35em Arial, Helvetica, sans-serif; }
                     <table cellspacing="0" cellpadding="0" border="0" width="650">
                         <thead>
                         <tr>
-                            <th align="left" width="325" bgcolor="#431F4C" style="font-size:14px; padding:5px 9px 6px 9px; line-height:1em;color:#fffff;">Billing Information:</th>
+                            <th align="left" width="325" bgcolor="#431F4C" style="padding:5px 9px 6px 9px; line-height:1em;"><p style="font-size:14px;color:#fffff;">Billing Information:</p></th>
                             <th width="10"></th>
-                            <th align="left" width="325" bgcolor="#431F4C" style="font-size:14px; padding:5px 9px 6px 9px; line-height:1em;color:#fffff;">Payment Method:</th>
+                            <th align="left" width="325" bgcolor="#431F4C" style="padding:5px 9px 6px 9px; line-height:1em;"><p style="font-size:14px;color:#fffff;">Payment Method:</p></th>
                         </tr>
                         </thead>
                         <tbody>
@@ -70,9 +70,9 @@ body,td { color:#2f2f2f; font:11px/1.35em Arial, Helvetica, sans-serif; }
                     <table cellspacing="0" cellpadding="0" border="0" width="650">
                         <thead>
                         <tr>
-                            <th align="left" width="325"  bgcolor="#431F4C" style="font-size:14px; padding:5px 9px 6px 9px; line-height:1em;color:#fffff;">Shipping Information:</th>
+                            <th align="left" width="325" bgcolor="#431F4C" style="padding:5px 9px 6px 9px; line-height:1em;"><p style="font-size:14px;color:#fffff;">Shipping Information:</p></th>
                             <th width="10"></th>
-                            <th align="left" width="325" bgcolor="#431F4C" style="font-size:14px; padding:5px 9px 6px 9px; line-height:1em;color:#fffff;">Shipping Method:</th>
+                            <th align="left" width="325" bgcolor="#431F4C" style="padding:5px 9px 6px 9px; line-height:1em;"><p style="font-size:14px;color:#fffff;">Shipping Method:</p></th>
                         </tr>
                         </thead>
                         <tbody>
