--- a/app/design/frontend/base/default/template/email/order/items.phtml
+++ b/app/design/frontend/base/default/template/email/order/items.phtml
@@ -28,9 +28,9 @@
 <table cellspacing="0" cellpadding="0" border="0" width="650" style="border-bottom:1px solid #431F4C;margin-top:50px">
     <thead>
         <tr>
-            <th align="left" bgcolor="#431F4C" style="font-size:14px; padding:3px 9px;color:#fff;font-weight:bold;"><?php echo $this->__('Item') ?></th>
-            <th align="left" bgcolor="#431F4C" style="font-size:14px; padding:3px 9px;color:#fff;font-weight:bold;"><?php echo $this->__('Qty') ?></th>
-            <th align="right" bgcolor="#431F4C" style="font-size:14px; padding:3px 9px;color:#fff;font-weight:bold;"><?php echo $this->__('Subtotal') ?></th>
+            <th align="left" bgcolor="#431F4C" style="font-size:14px; padding:3px 9px;color:#fff;font-weight:bold;" colspan="1"><?php echo $this->__('Item') ?></th>
+            <th align="left" bgcolor="#431F4C" style="font-size:14px; padding:3px 9px;color:#fff;font-weight:bold;" colspan="1"><?php echo $this->__('Qty') ?></th>
+            <th align="right" bgcolor="#431F4C" style="font-size:14px; padding:3px 9px;color:#fff;font-weight:bold;" colspan="2"><?php echo $this->__('Subtotal') ?></th>
         </tr>
     </thead>
 
