--- a/app/design/frontend/base/default/template/email/order/items.phtml
+++ b/app/design/frontend/base/default/template/email/order/items.phtml
@@ -25,7 +25,7 @@
  */
 ?>
 <?php $_order = $this->getOrder() ?>
-<table cellspacing="0" cellpadding="0" border="0" width="650" style="border-bottom:1px solid #431F4C;margin-top:50px">
+<table cellspacing="0" cellpadding="0" border="0" width="650" style="border-bottom:1px solid #431F4C;margin:30px 0">
     <thead>
         <tr>
             <th align="left" bgcolor="#431F4C" style="font-size:14px; padding:3px 9px;color:#fff;font-weight:bold;" colspan="1"><?php echo $this->__('Item') ?></th>
