--- a/app/design/frontend/base/default/template/email/order/items.phtml
+++ b/app/design/frontend/base/default/template/email/order/items.phtml
@@ -25,7 +25,7 @@
  */
 ?>
 <?php $_order = $this->getOrder() ?>
-<table cellspacing="0" cellpadding="0" border="0" width="650" style="margin:30px 0;padding-bottom:15px;">
+<table cellspacing="0" cellpadding="0" border="0" width="650" style="margin:0px 0 30px;padding-bottom:15px;">
     <thead>
         <tr>
             <th align="left" bgcolor="#431F4C" style="font-size:14px; padding:3px 9px;color:#fff;font-weight:bold;" colspan="1"><?php echo $this->__('Item') ?></th>
@@ -42,7 +42,7 @@
     <?php endforeach; ?>
 <br /><br /><br />
     <tbody style="margin-top:30px;">
-        <?php echo $this->getChildHtml('order_totals_email') ?>
+        <?php echo $this->getChildHtml('order_totals') ?>
     </tbody>
 </table>
 <?php if ($this->helper('giftmessage/message')->isMessagesAvailable('order', $_order, $_order->getStore()) && $_order->getGiftMessageId()): ?>
