--- a/app/locale/en_US/template/email/sales/order_new.html
+++ b/app/locale/en_US/template/email/sales/order_new.html
@@ -34,7 +34,7 @@ body,td { color:#2f2f2f; font:11px/1.35em Arial, Helvetica, sans-serif; }
                     <p style="font-size:12px; line-height:16px; margin:0;">
                         Thank you for your order from {{var store.getFrontendName()}}.
                         Once your package ships we will send an email with a link to track your order.
-                        You can check the status of your order by <a href="{{store url="customer/account/"}}" style="color:#1E7EC8;">logging into your account</a>.
+                        You can check the status of your order by <a href="{{store url="customer/account/"}}" style="color:#431F4C;">logging into your account</a>.
                         If you have any questions about your order please contact us at <a href="mailto:{{config path='trans_email/ident_support/email'}}" style="color:#431F4C;">{{config path='trans_email/ident_support/email'}}</a> or call us at <span class="nobr">{{config path='general/store_information/phone'}}</span></p><br />
                     <p style="font-size:12px; line-height:16px; margin:0;">Your order confirmation is below. Thank you again for your business.</p>
             </tr>
