--- a/app/design/frontend/default/rooja/template/rewards/sales/order/print/points.phtml
+++ b/app/design/frontend/default/rooja/template/rewards/sales/order/print/points.phtml
@@ -47,8 +47,8 @@ $colspan = $this->getColSpan();
 ?>
 <?php if ($this->getOrder()->hasPointsEarning()): ?>
     <tr class="order-print-points-earned">
-        <td class="a-right caption" <?php echo $this->getLabelProperties(); ?>><?php echo $this->__('Credits Earned') ?></td>
-        <td class="last a-right" <?php echo $this->getValueProperties(); ?>><span class="amount"><?php echo $this->getPointsEarnedString() ?></span></td>
+        <td colspan="3" align="right" style="padding:3px 9px;" class="a-right caption" <?php echo $this->getLabelProperties(); ?>><?php echo $this->__('Credits Earned') ?></td>
+        <td align="right" style="padding:3px 9px;" class="last a-right" <?php echo $this->getValueProperties(); ?>><span class="amount"><?php echo $this->getPointsEarnedString() ?></span></td>
     </tr>
 <?php endif; ?>
 <?php if ($this->getOrder()->hasPointsSpending()): ?>
