--- a/app/locale/en_US/template/email/sales/order_new.html
+++ b/app/locale/en_US/template/email/sales/order_new.html
@@ -23,7 +23,7 @@ body,td { color:#2f2f2f; font:11px/1.35em Arial, Helvetica, sans-serif; }
 <table cellspacing="0" cellpadding="0" border="0" width="100%">
 <tr>
     <td align="center" valign="top" style="padding:20px 0 20px 0">
-        <table bgcolor="#FFFFFF" cellspacing="0" cellpadding="10" border="0" width="650" style="border:1px solid #E0E0E0;">
+        <table bgcolor="#FFFFFF" cellspacing="0" cellpadding="10" border="0" width="650">
             <!-- [ header starts here] -->
             <tr>
                 <td valign="top"><a href="http://rooja.com" target="_blank"><img src="{{skin url="images/email/thanks-for-ordering.png" _area='frontend'}}" alt="{{var store.getFrontendName()}}"  style="margin-bottom:10px;" border="0"/></a></td>
@@ -35,7 +35,7 @@ body,td { color:#2f2f2f; font:11px/1.35em Arial, Helvetica, sans-serif; }
                         Thank you for your order from {{var store.getFrontendName()}}.
                         Once your package ships we will send an email with a link to track your order.
                         You can check the status of your order by <a href="{{store url="customer/account/"}}" style="color:#431F4C;">logging into your account</a>.
-                        If you have any questions about your order please contact us at <a href="mailto:{{config path='trans_email/ident_support/email'}}" style="color:#431F4C;">{{config path='trans_email/ident_support/email'}}</a> or call us at <span class="nobr">{{config path='general/store_information/phone'}}</span></p><br />
+                        If you have any questions about your order please contact us at <a href="mailto:{{config path='trans_email/ident_support/email'}}" style="color:#431F4C;">{{config path='trans_email/ident_support/email'}}</a> or call us at <span class="nobr" style="color:#431F4C;">{{config path='general/store_information/phone'}}</span></p><br />
                     <p style="font-size:12px; line-height:16px; margin:0;">Your order confirmation is below. Thank you again for your business.</p>
             </tr>
             <tr>
