--- a/app/locale/en_US/template/email/sales/order_new.html
+++ b/app/locale/en_US/template/email/sales/order_new.html
@@ -48,9 +48,9 @@ body,td { color:#2f2f2f; font:11px/1.35em Arial, Helvetica, sans-serif; }
                     <table cellspacing="0" cellpadding="0" border="0" width="650">
                         <thead>
                         <tr>
-                            <th align="left" width="325" bgcolor="#431F4C" style="padding:5px 9px 6px 9px; line-height:1em;"><p style="font-size:14px;color:#ffffff;">Billing Information:</p></th>
+                            <th align="left" width="325" bgcolor="#431F4C" style="padding:3px 9px; line-height:1em;"><p style="font-size:14px;color:#ffffff;">Billing Information:</p></th>
                             <th width="10"></th>
-                            <th align="left" width="325" bgcolor="#431F4C" style="padding:5px 9px 6px 9px; line-height:1em;"><p style="font-size:14px;color:#ffffff;">Shipping Information:</p></th>
+                            <th align="left" width="325" bgcolor="#431F4C" style="padding:3px 9px; line-height:1em;"><p style="font-size:14px;color:#ffffff;">Shipping Information:</p></th>
                         </tr>
                         </thead>
                         <tbody>
@@ -70,9 +70,9 @@ body,td { color:#2f2f2f; font:11px/1.35em Arial, Helvetica, sans-serif; }
                     <table cellspacing="0" cellpadding="0" border="0" width="650">
                         <thead>
                         <tr>
-                            <th align="left" width="325" bgcolor="#431F4C" style="padding:5px 9px 6px 9px; line-height:1em;"><p style="font-size:14px;color:#ffffff;">Payment Method:</p></th>
+                            <th align="left" width="325" bgcolor="#431F4C" style="padding:3px 9px; line-height:1em;"><p style="font-size:14px;color:#ffffff;">Payment Method:</p></th>
                             <th width="10"></th>
-                            <th align="left" width="325" bgcolor="#431F4C" style="padding:5px 9px 6px 9px; line-height:1em;"><p style="font-size:14px;color:#ffffff;">Shipping Method:</p></th>
+                            <th align="left" width="325" bgcolor="#431F4C" style="padding:3px 9px; line-height:1em;"><p style="font-size:14px;color:#ffffff;">Shipping Method:</p></th>
                         </tr>
                         </thead>
                         <tbody>
