--- a/app/design/frontend/default/rooja/template/checkout/cart/coupon.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/cart/coupon.phtml
@@ -26,7 +26,7 @@
 ?>
 <form id="discount-coupon-form" action="<?php echo $this->getUrl('checkout/cart/couponPost') ?>" method="post">
     <div class="discount">
-        <h2><?php echo $this->__('Discount Codes') ?></h2>
+        <h4>Coupon Code</h4>
         <div class="discount-form">
             <input type="hidden" name="remove" id="remove-coupone" value="0" />
             <div class="input-box">
