--- a/app/design/frontend/default/rooja/template/checkout/cart.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/cart.phtml
@@ -110,7 +110,7 @@
         </fieldset>
    
    
-        <div class="col2-set">
+        <div class="col2-set fl">
            
                             <?php if($this->getContinueShoppingUrl()): ?>
                                 <button type="button" title="<?php echo $this->__('Continue Shopping') ?>" class="button btn-continue" onclick="setLocation('<?php echo $this->getContinueShoppingUrl() ?>')"><span><span><?php echo $this->__('Continue Shopping') ?></span></span></button>
@@ -122,7 +122,7 @@
 </div>
            
  </form>
-	<div class="col-2">
+	<div class="col-2 fl" style="margin:-50px 0 0 400px;">
 
      <?php echo $this->getChildHtml('coupon') ?>
      <?php if (!$this->getIsVirtual()): echo $this->getChildHtml('shipping'); endif; ?>
