--- a/app/design/frontend/default/rooja/template/checkout/cart.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/cart.phtml
@@ -122,13 +122,13 @@
 </div>
            
  </form>
-	<div class="col-2 fl" style="margin:-50px 0 0 400px;">
+	<div class="col-2 fl" style="margin:-30px 0 0 300px;">
 
      <?php echo $this->getChildHtml('coupon') ?>
      <?php if (!$this->getIsVirtual()): echo $this->getChildHtml('shipping'); endif; ?>
  </div>
 
-<div class="totals">
+<div class="totals fr">
 	<div class="total_gray">
 	<h2>You current total</h2>
 
