--- a/app/design/frontend/default/rooja/template/checkout/cart.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/cart.phtml
@@ -122,13 +122,13 @@
 </div>
            
  </form>
-	<div class="col-2 fl" style="margin:10px 0 0 10px;">
+	<div class="col-2 fl" style="margin:15px 0 0 40px;">
 
      <?php echo $this->getChildHtml('coupon') ?>
      <?php if (!$this->getIsVirtual()): echo $this->getChildHtml('shipping'); endif; ?>
  </div>
 
-<div class="totals fr">
+<div class="totals fr" style="margin-top:15px;">
 	<div class="total_gray">
 	<h2>You current total</h2>
 
