--- a/app/design/frontend/default/rooja/template/checkout/onepage.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/onepage.phtml
@@ -71,7 +71,13 @@
 			});
 			
 			$("#billing-address-select").change(function() {
-			 billing.save();
+			 if($('#billing-new-address-form').is(":visible")){
+				$('#billingSaveBtn').show();
+			}
+			else{
+				$('#billingSaveBtn').hide();
+				billing.save();
+			}	
 			});
 
 		 });
