--- a/app/design/frontend/default/rooja/template/catalog/product/view.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/view.phtml
@@ -64,6 +64,7 @@ jQuery(function() {
 if (!$categoryIds == null){
 	foreach($categoryIds as $categoryId) {
 		$currentcategory = Mage::getModel('catalog/category')->load($categoryId);
+		print $currentcategory;
 		if($currentcategory ==5){
 			$boutique="boutiques!";
 		}
