--- a/app/design/frontend/default/rooja/template/catalog/product/view.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/view.phtml
@@ -61,13 +61,12 @@ jQuery(function() {
     var optionsPrice = new Product.OptionsPrice(<?php echo $this->getJsonConfig() ?>);
 </script>
 <?php $categoryIds = $_product->getCategoryIds();
+echo Mage::getBlockSingleton('catalog/navigation')->getCurrentCategory()->parent_id;
+
 if (!$categoryIds == null){
 	foreach($categoryIds as $categoryId) {
 		$currentcategory = Mage::getModel('catalog/category')->load($categoryId);
-		echo $categoryId;
-		if($currentcategory ==5){
-			$boutique="boutiques!";
-		}
+		
 		break;
 	}	
 }
