--- a/app/design/frontend/default/rooja/template/checkout/onepage.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/onepage.phtml
@@ -59,16 +59,16 @@
 			$list.prepend('<option selected="selected" disabled="disabled">Choose one:</option>');
 			
 			$list.change(function(){
-				billing.save();
+				//billing.save();
 				if($('#shipping-new-address-form').is(":visible")){
 					$('#shippingSaveBtn').show();
 				}
-				else{$('#shippingSaveBtn').hide();}
+				else{$('#shippingSaveBtn').hide();shipping.save();}
 			});
 			
-			$("#shipping-address-select").change(function() {
+			/*$("#shipping-address-select").change(function() {
 			 shipping.save();
-			});
+			});*/
 			
 			$("#billing-address-select").change(function() {
 			 if($('#billing-new-address-form').is(":visible")){
