--- a/app/design/frontend/default/rooja/template/checkout/onepage/shipping_method/available.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/onepage/shipping_method/available.phtml
@@ -31,12 +31,13 @@
         <dt><?php echo $this->getCarrierName($code) ?></dt>
         <dd>
             <ul>
-            <?php foreach ($_rates as $_rate): ?>
+            <?php $i=0; foreach ($_rates as $_rate): ?>
+				<?php $i++; ?>
                 <li>
                    <?php if ($_rate->getErrorMessage()): ?>
                     <ul class="messages"><li class="error-msg"><ul><li><?php echo $_rate->getErrorMessage() ?></li></ul></li></ul>
                    <?php else: ?>
-                        <input name="shipping_method" type="radio" value="<?php echo $_rate->getCode() ?>" id="s_method_<?php echo $_rate->getCode() ?>"<?php if($_rate->getCode()===$this->getAddressShippingMethod()) echo ' checked="checked"' ?> onclick="shippingMethod.save()" class="radio"/>
+                        <input name="shipping_method" type="radio" value="<?php echo $_rate->getCode() ?>" id="s_method_<?php echo $_rate->getCode() ?>"<?php if($_rate->getCode()===$this->getAddressShippingMethod() || $i==1) echo ' checked="checked"' ?> onclick="shippingMethod.save()" class="radio"/>
                         <label for="s_method_<?php echo $_rate->getCode() ?>"><?php echo $_rate->getMethodTitle() ?>
                         <strong>
                         <?php $_excl = $this->getShippingPrice($_rate->getPrice(), $this->helper('tax')->displayShippingPriceIncludingTax()); ?>
