--- a/app/design/frontend/default/rooja/template/checkout/onepage/billing.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/onepage/billing.phtml
@@ -152,7 +152,7 @@ function loggedInBilling()
                 
                 
             <?php if ($this->isCustomerLoggedIn() && $this->customerHasAddresses()):?>
-                <li class="control"><input type="checkbox" name="billing[save_in_address_book]" value="1" title="<?php echo $this->__('Save in address book') ?>" id="billing:save_in_address_book" onchange="shipping.setSameAsBilling(false);"<?php if ($this->getAddress()->getSaveInAddressBook()):?> checked="checked"<?php endif;?> /> <label for="billing:save_in_address_book"><?php echo $this->__('Save in address book') ?></label></li>
+                <li class="control"><input type="checkbox" name="billing[save_in_address_book]" value="1" title="<?php echo $this->__('Save in address book') ?>" id="billing:save_in_address_book" onchange="shipping.setSameAsBilling(false);"<?php //if ($this->getAddress()->getSaveInAddressBook()):?> checked="checked"<?php //endif;?> /> <label for="billing:save_in_address_book"><?php echo $this->__('Save in address book') ?></label></li>
             <?php else:?>
                 <li class="no-display"><input type="hidden" name="billing[save_in_address_book]" value="1" /></li>
             <?php endif;?>
