--- a/app/design/frontend/default/rooja/template/checkout/onepage/review.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/onepage/review.phtml
@@ -27,5 +27,6 @@
 
 <div class="order-review" id="checkout-review-load">
     <?php echo $this->getChildHtml('info') ?>
+	<img src="<?php echo $this->getSkinUrl('images/veri.jpg'); ?>" alt="Security" id="secureLogos">
 </div>
 
