--- a/app/locale/en_US/template/email/awrma/basecustomer.html
+++ b/app/locale/en_US/template/email/awrma/basecustomer.html
@@ -2,6 +2,7 @@
 <!--@styles
 body,td { color:#2f2f2f; font:11px/1.35em Verdana, Arial, Helvetica, sans-serif; }
 @-->
+<p><a href="http://rooja.com" target="_blank"><img src="{{skin url="images/email/email-templates_01.png" _area='frontend'}}" alt="Rooja Fashion"></a></p>
 <p>Dear {{var request.getCustomerName()}}!<p>
 {{var content}}
 {{depend request.getNotifyHasComment()}}
