--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -169,16 +169,14 @@ ul#myAccount li{
 }
 
 ul#myAccount li.welcome-top {
-	padding: 36px 25px 27px 20px;
+	padding: 36px 25px 28px 20px;
 	background: url("../images/icons/arrow-nav-white.png") no-repeat 135px 34px;
 	margin: -26px 0 0 0;
 }
 
 ul#myAccount li.welcome-top:hover {
-	padding: 36px 25px 27px 20px;
-	background:#220F26 url("../images/icons/arrow-nav-white.png") no-repeat 135px 34px;
-	margin: -26px 0 0 0;
-	}
+	background-color:#220F26;
+}
 
 	ul#myAccount li.ignore-item {
 		background: url("../images/invite-friends.png") no-repeat 9px center;
