--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -165,12 +165,13 @@ ul#myAccount{float:left;}
 ul#myAccount li{
 	float: left;
 	padding: 10px 20px 29px 0px;
-	background: url("../images/icons/arrow-nav-white.png") no-repeat right 8px;
+	background: url("../images/icons/arrow-nav-white.png") no-repeat right 8px fixed;
+	border-bottom:1px solid #431f4c;
 }
 
 ul#myAccount li.welcome-top {
 	padding: 36px 25px 28px 20px;
-	background: url("../images/icons/arrow-nav-white.png") no-repeat 135px 34px;
+	background: url("../images/icons/arrow-nav-white.png") no-repeat 135px 34px fixed;
 	margin: -26px 0 0 0;
 }
 
