--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -213,7 +213,8 @@ ul#myAccount li ul {
 	background: #220f26;
 	z-index: 15;
 	width: 135px;
-	top: 69px;
+	top: 68px;
+	border-top:1px solid #431f4c;
 	margin-left:-20px;
 }
 ul#myAccount li:hover ul {display: block;}
