--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -797,6 +797,7 @@ a[href$=".doc"]:after {content: " (DOC)";}
 	margin: 0 auto;
 	margin-top: 20px;
 }
+.btnPressed#billingSaveBtn span{background-color:#000;}
 
 .billing_section {width: 50%;}
 
