--- a/app/design/frontend/default/rooja/template/checkout/onepage.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/onepage.phtml
@@ -62,6 +62,7 @@
 				//billing.save();
 				if($('#shipping-new-address-form').is(":visible")){
 					$('#shippingSaveBtn').removeClass("btnPressed");
+					$('#shipping-new-address-form').removeClass("infoSubmitted");
 					$('#shippingSaveBtn').show();
 				}
 				else{$('#shippingSaveBtn').hide();shipping.save();}
@@ -69,14 +70,17 @@
 			
 			$("#shippingSaveBtn").click(function() {
 			 $(this).addClass("btnPressed");
+			 $('#shipping-new-address-form').addClass("infoSubmitted");
 			});
 			$("#billingSaveBtn").click(function() {
 			 $(this).addClass("btnPressed");
+			 $('#billing-new-address-form').addClass("infoSubmitted");
 			});
 			
 			$("#billing-address-select").change(function() {
 			 if($('#billing-new-address-form').is(":visible")){
 				$('#billingSaveBtn').removeClass("btnPressed");
+				$('#billing-new-address-form').removeClass("infoSubmitted");
 				$('#billingSaveBtn').show();
 			}
 			else{
