--- a/app/design/frontend/default/rooja/template/page/html/footer.phtml
+++ b/app/design/frontend/default/rooja/template/page/html/footer.phtml
@@ -69,7 +69,7 @@
 				<li><a href="http://www.facebook.com/roojafashion" title="Like us on Facebook" target="_blank"><img src="<?php echo $this->getSkinUrl('images/icons/facebook-brown.png') ?>" alt="Facebook icon">Join us on Facebook</a></li>
 			</ul>
 			<br>
-			<a href="http://mixpanel.com/f/partner"><img src="http://mixpanel.com/site_media/images/partner/badge_blue.png" alt="Web Analytics" /></a>
+			<!--<a href="http://mixpanel.com/f/partner"><img src="http://mixpanel.com/site_media/images/partner/badge_blue.png" alt="Web Analytics" /></a>-->
 		</section>
 		
 		<p id="copyrightInfo" class="fl clear">Copyright &copy; 2011 Rooja. all work is an act of <a href="http://gophilosophie.com" target="_blank" title="Site design and development by philosophie interactive">philosophie</a></p>
