--- a/app/design/frontend/default/rooja/template/checkout/cart/sidebar/default.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/cart/sidebar/default.phtml
@@ -50,7 +50,7 @@
 			<tr>
 				<td width="500px">
 		        Quantity in Cart: <strong><?php echo $this->getQty() ?></strong>     <?php if ($isVisibleProduct): ?>
-			        <a href="<?php echo $this->getConfigureUrl() ?>" title="<?php echo $this->__('Edit item') ?>" class="btn-edit"><?php echo $this->__('Edit item')?></a>
+			        <!--<a href="<?php echo $this->getConfigureUrl() ?>" title="<?php echo $this->__('Edit item') ?>" class="btn-edit"><?php echo $this->__('Edit item')?></a>-->
 			        <?php endif ?>
 			    
 				</td>
