--- a/app/design/frontend/default/rooja/template/checkout/cart/sidebar.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/cart/sidebar.phtml
@@ -91,9 +91,13 @@
 <script type="text/javascript">
 	jQuery(document).ready(function(){
 		jQuery("#myBag").click(function() {
-			if($('#shipping-new-address-form').is(":visible")){
+			if(jQuery('#shipping-new-address-form').is(":visible")){
 				jQuery("#sidebarCart").slideUp();
 				return false;
+			}
+			else{
+				jQuery("#sidebarCart").slideDown();
+				return false;	
 			}
 			
 			});
