--- a/app/design/frontend/default/rooja/template/checkout/cart/sidebar.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/cart/sidebar.phtml
@@ -91,7 +91,7 @@
 <script type="text/javascript">
 	jQuery(document).ready(function(){
 		jQuery("#myBag").click(function() {
-			if(jQuery('#shipping-new-address-form').is(":visible")){
+			if(jQuery('#sidebarCart').is(":visible")){
 				jQuery("#sidebarCart").slideUp();
 				return false;
 			}
