--- a/app/design/frontend/default/rooja/template/checkout/cart/sidebar.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/cart/sidebar.phtml
@@ -91,6 +91,7 @@
 <script type="text/javascript">
 	jQuery(document).ready(function(){
 		jQuery("#myBag").click(function() {
+			console.log('sidebarcart');
 			if(jQuery('#sidebarCart').is(":visible")){
 				jQuery("#sidebarCart").slideUp();
 				return false;
@@ -99,6 +100,7 @@
 				jQuery("#sidebarCart").slideDown();
 				return false;	
 			}
+			
 			
 			});
 		jQuery("#closerBtn").click(function() {
