--- a/app/design/frontend/default/default/template/moo/catalog/product/view/media.phtml
+++ b/app/design/frontend/default/default/template/moo/catalog/product/view/media.phtml
@@ -28,8 +28,8 @@
 
 
 <script type="text/javascript">
-	$(document).ready(function(){
-		$("#cloudZoom").bind("click", function(){return false;});
+	jQuery(document).ready(function(){
+		jQuery("#cloudZoom").bind("click", function(){return false;});
 	});
 </script>
 
