--- a/app/design/frontend/default/rooja/template/checkout/cart/sidebar.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/cart/sidebar.phtml
@@ -90,7 +90,7 @@
 <?php endif;?>
 <script type="text/javascript">
 	jQuery(document).ready(function(){
-		/*jQuery("#myBag").click(function() {
+		jQuery("#myBag").click(function() {
 			console.log('sidebarcart');
 			if(jQuery('#sidebarCart').is(":visible")){
 				jQuery("#sidebarCart").slideUp();
@@ -102,7 +102,7 @@
 			}
 			
 			
-			});*/
+			});
 		jQuery("#closerBtn").click(function() {
 			        jQuery("#sidebarCart").slideUp();
 			        return false;
