--- a/app/design/frontend/default/rooja/template/checkout/cart/sidebar.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/cart/sidebar.phtml
@@ -91,16 +91,16 @@
 <script type="text/javascript">
 	jQuery(document).ready(function(){
 		jQuery("#myBag").click(function() {
-			console.log('sidebarcart');
-			if(jQuery('#sidebarCart').is(":visible")){
+			/*if(jQuery('#sidebarCart').is(":visible")){
 				jQuery("#sidebarCart").slideUp();
 				return false;
 			}
 			else{
 				jQuery("#sidebarCart").slideDown();
 				return false;	
-			}
-			
+			}*/
+			jQuery("#sidebarCart").slideToggle();
+			return false;
 			
 			});
 		jQuery("#closerBtn").click(function() {
