--- a/app/design/frontend/default/rooja/template/checkout/cart/sidebar.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/cart/sidebar.phtml
@@ -90,8 +90,7 @@
 <?php endif;?>
 <script type="text/javascript">
 	jQuery(document).ready(function(){
-		jQuery("#myBag").click(function() {
-			console.log('sidebarcart');
+		/*jQuery("#myBag").click(function() {
 			if(jQuery('#sidebarCart').is(":visible")){
 				jQuery("#sidebarCart").slideUp();
 				return false;
@@ -100,9 +99,7 @@
 				jQuery("#sidebarCart").slideDown();
 				return false;	
 			}
-			
-			
-			});
+			});*/
 		jQuery("#closerBtn").click(function() {
 			        jQuery("#sidebarCart").slideUp();
 			        return false;
