--- a/app/design/frontend/default/rooja/template/customer/form/forgotpassword.phtml
+++ b/app/design/frontend/default/rooja/template/customer/form/forgotpassword.phtml
@@ -24,6 +24,33 @@
  * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
+<script type="text/javascript">
+(function ($) {
+	
+	var fadeDuration=2000;
+	var slideDuration=4000;
+	var currentIndex=1;
+	var nextIndex=1;
+	
+	$(document).ready(function() {
+		
+		
+		$('ul.slideshow li').fadeOut(0);
+		$("'ul.slideshow li:nth-child("+nextIndex+")'").addClass('show').fadeIn(fadeDuration);
+		var timer = setInterval(function () {
+			nextIndex = currentIndex+1;
+			if(nextIndex > $('ul.slideshow li').length) {
+				nextIndex = 1;
+			}
+			$("'ul.slideshow li:nth-child("+nextIndex+")'").addClass('show').fadeIn(fadeDuration);
+			$("'ul.slideshow li:nth-child("+currentIndex+")'").fadeOut(fadeDuration).removeClass('show');
+			currentIndex = nextIndex;
+		},slideDuration);
+	
+	});
+	
+})(jQ);
+</script>
 <div id="notifyWrapper">
 <div class="wrapper">
 <header id="mainHeader">
@@ -43,14 +70,10 @@
 </section><!--End Content-->
 </div>
 <section id="brands">
-	<div id="brandCol1" class="">
-		<img src="<?php echo $this->getSkinUrl('images/splash/logos/1.png') ?>">
-	</div>
-	<div id="brandCol2" class="">
-		<img src="<?php echo $this->getSkinUrl('images/splash/logos/2.png') ?>">
-	</div>
-	<div id="brandCol3" class="">
-		<img src="<?php echo $this->getSkinUrl('images/splash/logos/3.png') ?>">
-	</div>
+	<ul class="slideshow">
+		<li><img src="<?php echo $this->getSkinUrl('images/splash/logos/1.png') ?>"></li>
+		<li><img src="<?php echo $this->getSkinUrl('images/splash/logos/2.png') ?>"></li>
+		<li><img src="<?php echo $this->getSkinUrl('images/splash/logos/3.png') ?>"></li>
+		</ul>
 </section>
 </div>
