Alerts price when liking

--- a/app/design/frontend/default/rooja/template/catalog/product/view.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/view.phtml
@@ -346,7 +346,7 @@ echo '<span>' . $likes = $xml->link_stat->like_count . '</span>';
 	</div>
 </section>
 <script type="text/javascript">
-	jQuery.noConflict();
+	//jQuery.noConflict();
 	 /*var fbOffset = <?php echo number_format($fbinc, 2); ?>;
 	 var fbPriceJS = <?php echo number_format($fbprice, 2); ?>;*/
 	var fbOffset = <?php echo $fbinc; ?>;
@@ -359,10 +359,10 @@ echo '<span>' . $likes = $xml->link_stat->like_count . '</span>';
                url:      "/rbanh?id=<?php echo $_product->getId(); ?>&url=<?php echo urlencode($_SERVER['REQUEST_URI']); ?>",
                dataType: "html",
                success: function(x){
-                 //alert('price is now set to: ' + x);
                 var newPrice = fbPriceJS - fbOffset;
-              jQuery('#likeThis').find('span:last').text(function(i,txt) { return parseInt(txt, 10) + 1; });
-                 jQuery('.currentPrice').find('span:last').text(' $'+ newPrice);
+				 jQuery('#likeThis').find('span:last').text(function(i,txt) { return parseInt(txt, 10) + 1; });
+				 console.log("New price is: " + newPrice);
+                 jQuery('.currentPrice').find('span:last').text(' Rs. '+ newPrice);
 				
 	            //alert('<?php echo '$' . number_format($fbprice, 2); ?>');
                },
