--- a/app/design/frontend/default/rooja/template/catalog/product/view/addtocart.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/view/addtocart.phtml
@@ -37,19 +37,14 @@
 				<script type="text/javascript">
 					(function ($) {
 
-						console.log($, "HEY");
-						var old = productAddToCartForm.submit;
-
-						productAddToCartForm.submit = function () {
+						$('#product_addtocart_form').submit(function () {
 
 							var quantity = $('#qty').val();
 
 							console.log(quantity);
 
-							old.apply(this);
 
-
-						};
+						});
 
 					})(jQuery);
 				</script>
