--- a/app/design/frontend/default/rooja/template/catalog/product/view.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/view.phtml
@@ -186,7 +186,7 @@ echo '<span>' . $likes = $xml->link_stat->like_count . '</span>';
 								<p class="currentPrice">Current Price:<span>
 								<?php if (!$fbprice == null) { ?>
 								<?php echo 'Rs. ' . number_format($fbprice,2); } else { ?>
-								<?php $fbprice = number_format($_product->getSpecialprice(), 2);echo 'Rs. ' . $fbprice; } ?></span></p>
+								<?php echo 'Rs. ' . number_format($_product->getSpecialprice(), 2); } ?></span></p>
 								<a href="#" class="sizeChart fr">Size Chart</a>
 
 								<br class="clear">
@@ -349,8 +349,13 @@ echo '<span>' . $likes = $xml->link_stat->like_count . '</span>';
 	//jQuery.noConflict();
 	 /*var fbOffset = <?php echo number_format($fbinc, 2); ?>;
 	 var fbPriceJS = <?php echo number_format($fbprice, 2); ?>;*/
+	<?php if (!$fbprice == null) { ?>
+		var fbPriceJS = <?php echo $fbprice; ?>;
+	<?php else { ?>
+		var fbPriceJS = <?php echo $_product->getSpecialprice(); ?>;
+	<?php } ?>
 	var fbOffset = <?php echo $fbinc; ?>;
-	var fbPriceJS = <?php echo $fbprice; ?>;
+	
 	FB.Event.subscribe('edge.create', function(response) {
             
              // ajax the price
