--- a/app/design/frontend/default/rooja/template/catalog/product/view.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/view.phtml
@@ -347,20 +347,20 @@ echo '<span>' . $likes = $xml->link_stat->like_count . '</span>';
 </section>
 				<script type="text/javascript">
 				function formatCurrency(num) {
-num = num.toString().replace(/\D/g,'');
-if(isNaN(num))
-num = "0";
-sign = (num == (num = Math.abs(num)));
-num = Math.floor(num*100+0.50000000001);
-cents = num%100;
-num = Math.floor(num/100).toString();
-if(cents<10)
-cents = "0" + cents;
-for (var i = 0; i < Math.floor((num.length-(1+i))/3); i++)
-num = num.substring(0,num.length-(4*i+3))+','+
-num.substring(num.length-(4*i+3));
-return (((sign)?'':'-') + 'Rs. ' + num + '.' + cents);
-}
+					num = num.toString().replace(/\D/g,'');
+					if(isNaN(num))
+					num = "0";
+					sign = (num == (num = Math.abs(num)));
+					num = Math.floor(num*100+0.50000000001);
+					cents = num%100;
+					num = Math.floor(num/100).toString();
+					if(cents<10)
+					cents = "0" + cents;
+					for (var i = 0; i < Math.floor((num.length-(1+i))/3); i++)
+					num = num.substring(0,num.length-(4*i+3))+','+
+					num.substring(num.length-(4*i+3));
+					return (((sign)?'':'-') + 'Rs. ' + num + '.' + cents);
+				}
 	//jQuery.noConflict();
 	 /*var fbOffset = <?php echo number_format($fbinc, 2); ?>;
 	 var fbPriceJS = <?php echo number_format($fbprice, 2); ?>;*/
@@ -382,7 +382,7 @@ return (((sign)?'':'-') + 'Rs. ' + num + '.' + cents);
                 var newPrice = fbPriceJS - fbOffset;
 				 jQuery('#likeThis').find('span:last').text(function(i,txt) { return parseInt(txt, 10) + 1; });
 				 console.log("New price is: " + newPrice);
-                 jQuery('.currentPrice').find('span:last').text(formatCurrency(newPrice));
+                 jQuery('.currentPrice').find('span:last').text(' ' + formatCurrency(newPrice));
 				
 	            //alert('<?php echo '$' . number_format($fbprice, 2); ?>');
                },
