--- a/app/design/frontend/default/rooja/template/checkout/cart/sidebar.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/cart/sidebar.phtml
@@ -105,7 +105,18 @@
 			        return false;
 		});
 			
-	 });
+	});
+
+(function ($) {
+
+	$('.remove-item').live('click', function () {
+
+		alert("CLICK");
+
+	});
+
+
+	})(jQuery);
 			
 </script>
 
