--- a/app/design/frontend/default/rooja/template/checkout/cart/sidebar.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/cart/sidebar.phtml
@@ -107,7 +107,7 @@
 			
 	});
 
-(function ($) {
+jQuery(function ($) {
 
 	$('.remove-item').live('click', function () {
 
@@ -116,7 +116,7 @@
 	});
 
 
-	})(jQuery);
+});
 			
 </script>
 
