--- a/app/design/frontend/default/rooja/template/checkout/cart/sidebar.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/cart/sidebar.phtml
@@ -120,8 +120,10 @@ jQuery(function ($) {
 
 			var $a		= $('#myBag a'),
 				current	= $a.text().match(/\((\d)\)/)[1],
-				total	= parseInt(current) + parseInt(count),
+				total	= parseInt(current) - parseInt(count),
 				newText	= "My Bag (" + total + ")";
+
+			$a.text(newText);
 		}
 
 	});
